--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,7 +1,10 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url("/css/brass-wondermail/brass-wondermail.css");
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'JetBrains Mono', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h1:focus {
