--- a/Pages/CharacterSheetFull.razor.css
+++ b/Pages/CharacterSheetFull.razor.css
@@ -11,9 +11,8 @@
 	background-color: black;
 	height: 100%;
 	margin: auto;
-	max-width: 800px;
-	padding: 30px;
-	width: 100%;
+	padding: 20px;
+	width: 720px;
 }
 
 .box {
@@ -23,11 +22,11 @@
 }
 
 .row {
+	align-items: flex-start;
 	display: flex;
 	flex-direction: row;
-	gap: 10px;
+	gap: 5px;
 	justify-content: space-between;
-	align-items: flex-start;
 	width: 100%;
 }
 
@@ -35,15 +34,20 @@
 	align-items: center;
 	display: flex;
 	flex-direction: column;
-	/*gap: 4px;*/
 	width: 100%;
 }
+
+.grid { display: grid; }
+
+.bordered { gap: 5px; }
 
 .even { justify-content: space-evenly; }
 
 .tight { justify-content: center; }
 
 .left { align-items: flex-start; }
+
+.right { align-items: flex-end; }
 
 .spacer { flex-grow: 1; }
 
@@ -58,6 +62,8 @@
 	background-color: lime;
 	background-color: rgba(255, 255, 255, 0.50);
 	height: 1px;
+	margin-bottom: 5px;
+	margin-top: 5px;
 	width: 90%;
 }
 
@@ -67,15 +73,16 @@
 
 .sheet-body {
 	background-color: lightgray;
+	background-image: linear-gradient(to top left, lightgrey, white);
 	border-radius: 5px;
 	color: white;
+	gap: 5px;
 	padding: 5px;
 	width: 100%;
 }
 
 .name {
 	font-size: 1.5rem;
-	margin-top: -5px;
 	text-align: left;
 }
 
@@ -90,23 +97,21 @@
 }
 
 .stats {
-	background-color: #585858;
-	border-radius: 10px;
-	gap: 0px;
-	padding: 10px 0;
+	display: grid;
+	gap: 0 5%;
+	grid-template-columns: 1fr 1fr;
+	width: 100%;
 }
 
-.stat {
-	color: lightgrey;
-	text-align: center;
-	width: 25%;
-}
+.class > .stats { }
+
+.stat { white-space: pre; }
 
 .green { color: #22da09; }
 
 .cyan { color: #06c8c1; }
 
-.orange { color: #e3870f; }
+.orange { color: #e3b70f; }
 
 .blue { color: #009dff; }
 
@@ -114,10 +119,18 @@
 
 .purple { color: #a97bff; }
 
-.stat-value { font-size: 1.5rem; }
+.positive { color: lightgreen; }
 
-.stat-value.positive { color: lightgreen; }
+.negative { color: lightcoral; }
 
-.stat-value.negative { color: lightcoral; }
+.zero { color: grey; }
 
-.stat-name { font-size: 0.64rem; }
+.stat-name { font-size: 1rem; }
+
+
+.character-info {
+	/*width: 50%;*/
+	gap: 2px;
+}
+
+.class { /*width: 50%;*/ }
