--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,4 +2,5 @@
 
 <PageTitle>Index</PageTitle>
 
-<CharacterSheetFull />
+<CharacterSheetStatic CharacterName="Ambi" />
+<CharacterSheetStatic CharacterName="Celia Vanguard" />
