--- a/Shared/TableTemplate.razor
+++ b/Shared/TableTemplate.razor
@@ -1,20 +1,17 @@
 ﻿@using System.Diagnostics.CodeAnalysis
 @typeparam TItem
 
-<table class="table">
-	<thead class="table-header">
-		@TableHeader
-	</thead>
-	<tbody class="table-content">
-		@foreach (TItem item in Items)
+<div class="table-header">@TableHeader</div>
+
+<div class="table-content">
+	@foreach (TItem item in Items)
+	{
+		if (RowTemplate is not null)
 		{
-			if (RowTemplate is not null)
-			{
-				<tr class="table-item">@RowTemplate(item)</tr>
-			}
+			@RowTemplate(item)
 		}
-	</tbody>
-</table>
+	}
+</div>
 
 @code
 {
